delivery-chart/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: parcel-delivery-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: parcel-delivery-app
  template:
    metadata:
      labels:
        name: parcel-delivery-app
    spec:
      hostname: parcel-delivery-app
      containers:
        - name: beat-manual
          image: elastic/filebeat:7.9.3
          args: [
            "-c", "/etc/filebeat/filebeat.yml",
            "-e"
          ]
          volumeMounts:
            - name: beat-manual-config
              mountPath: /etc/filebeat/
            - name: manual-log-directory
              mountPath: /tmp/
        - name: delivery-app-log
          image: hailaliya/delivery:1.0.4
          volumeMounts:
            - name: manual-log-directory
              mountPath: /tmp/
      volumes:
        - name: beat-manual-config
          configMap:
            name: beat-manual-config
            items:
              - key: filebeat.yml
                path: filebeat.yml
        - name: manual-log-directory
          emptyDir: {}
